[gd_scene load_steps=6 format=3 uid="uid://c60gmlmsnosfq"]

[ext_resource type="Script" path="res://src/ui/cards/CardOverlay.gd" id="1_odu1a"]
[ext_resource type="Texture2D" uid="uid://b76t6ix8ghkp3" path="res://ast/game/cards/fgs/marked.png" id="2_mggle"]
[ext_resource type="Texture2D" uid="uid://jxssxj6ujb1i" path="res://ast/game/cards/fgs/frozen.png" id="3_0xbbe"]

[sub_resource type="Gradient" id="Gradient_2gmoa"]
colors = PackedColorArray(0, 0, 0, 0.498039, 0, 0, 0, 0.498039)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5fnbc"]
gradient = SubResource("Gradient_2gmoa")
width = 2

[node name="CardOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_odu1a")

[node name="CooldownTprogbar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 8
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_5fnbc")

[node name="MarkedTrect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mggle")

[node name="FrozenTrect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0xbbe")
